--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.3'
 
 services:
-  ad:
+  python:
     build: ./
     container_name: "github_action_test"
     working_dir: "/workspace"
