--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -23,4 +23,4 @@ jobs:
         run: |
           cd ${GITHUB_WORKSPACE}
           docker ps
-          docker exec -it github_action_test nosetests
+          docker exec -i github_action_test nosetests
